# sunrice

./: .gitignore  Aerenquest_games.todo  Gitflow.md  LICENSE  PIPELINE_DATA.md  README.md  USER_INSTALL_LINUX.md  pect  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
images/: Controls_spaceship_qwerty. jpg
livrable/: Improve_roi.py  panel_assemble.py
marvel_view/: __init__.py  aerench_config.py  config.py  roots_config.py
marvel_view/leaderboard/: __init__.py  client.py  models.py  ui.py
marvel_view/preprocessing/: __init__.py  connected_components.py  loader.py  meshing.py  water_harmonic.py  water_lames.py  water_lames2.py  water_membranes.py  wind_field.py
marvel_view/scripts/: add_audio.py  aerench_preprocess.py  aerench_visualize.py  diagnose_wind.py  export_html.py  export_html_light.py  lame2_normals_build.py  preprocess_all.py  roots_preprocess.py  roots_visualize.py  visualize_scene.py  water_conductance.py  water_conductance_build_meshes.py  water_harmonic_build.py  water_movie.py  wind_field_build.py
marvel_view/scripts/AerenQuest/: __init__.py  launcher.py
marvel_view/scripts/AerenQuest/G01_catch_the_fluxes/: __init__.py  game.py
marvel_view/scripts/games/: __init__.py  catch_flux.py  catch_pillars.py
marvel_view/scripts/water_conductance/: __init__.py  __main__.py  app.py  bitrate_profile.py  cli.py  constants.py  pipeline.py  styling.py
marvel_view/visualization/: __init__.py  actors.py  colormap_bar.py  gaze_reticle.py  ortho_panel.py  panel.py  roots_viewer.py  scene.py
(+2 files in other folders)
